More work on Maven indexing.