@@ -24,6 +24,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'tools.jackson.dataformat:jackson-dataformat-xml'
+
+    implementation 'org.apache.maven:maven-artifact:4.0.0-rc-5'
 
 	runtimeOnly 'org.xerial:sqlite-jdbc:3.47.1.0'
 	runtimeOnly 'org.hibernate.orm:hibernate-community-dialects:7.0.0.Beta1'
@@ -65,6 +68,7 @@ tasks.named('compileJava') {
 	dependsOn tasks.openApiGenerate
 }
 
-tasks.named('test') {
+tasks.named('test', Test) {
 	useJUnitPlatform()
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
 }
